--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +17,134 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.loader {
+  width: 100px;
+  height: 100px;
+  padding: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-30%, -50%);
+}
+
+.App .loader {
+  transform: translate(-50%, -50%);
+}
+
+.getStarted .loader {
+  top: 40%;
+}
+
+.sliderRoot {
+  width: 100vw;
+  margin: auto;
+  height: 100vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.bottomSlider {
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+}
+
+.gridAlignment {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+}
+
+* {
+  text-decoration: none;
+}
+
+.griditemStyle {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-weight: bold !important;
+  font-size: large;
+  color: white !important;
+}
+
+.gridInput {
+  display: flex;
+  justify-content: left;
+  width: 90vw;
+  margin: 10px auto !important;
+}
+.codeCompletionMain {
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.codeEditor :focus {
+  border: none;
+  outline: none;
+}
+
+.capturedPic {
+  height: 68vh;
+}
+
+@media screen and (min-width: 500px) {
+  .gridInput {
+    width: 50vw;
+    margin: 10px auto !important;
+    display: flex;
+    justify-content: left;
   }
-  to {
-    transform: rotate(360deg);
+  .codeCompletionMain {
+    margin-top: 5%;
   }
+}
+
+@media screen and (max-width: 500px) {
+  .capturedPic {
+    width: 70vw;
+    height: 30vh;
+  }
+
+  .editorClass {
+    width: 90vw !important;
+  }
+
+  .editorLayout {
+    width: 45vh;
+  }
+}
+
+.fileUploadQuery {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.fakeButton {
+  height: 55px;
+  width: 55px;
+  /*background-color:#D8D8D8; */
+  position: relative;
+  border: 1px solid #000;
+  border-radius: 3px;
+  text-align: center;
+  font: 15px arial;
+  line-height: 90px;
+}
+
+.imageCaptureStyle {
+  text-align: center;
+  padding-top: 12px;
 }
